feat: fetch full Git history for GitVersion
- Add step to fetch full Git history for GitVersion.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Fetch all history for GitVersion
+      run: git fetch --prune --unshallow
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
