--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,28 +38,21 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
 
-    - name: Build
-      run: dotnet build --configuration Release --no-restore /p:Version=${{ steps.gitversion.outputs.fullSemVer }}
+    - name: Publish win-x64
+      run: dotnet publish -c Release -r win-x64 --self-contained false /p:Version=${{ steps.gitversion.outputs.fullSemVer }}
 
     - name: Test
       run: dotnet test --no-build --verbosity normal
       continue-on-error: true
 
-    - name: Publish artifact
-      if: success()
-      uses: actions/upload-artifact@v4
-      with:
-        name: NetTools
-        path: bin/Release/net9.0/
-
     - name: Copy LICENSE to output
       if: success()
-      run: copy LICENSE bin/Release/net9.0/win-x64/
+      run: copy LICENSE bin/Release/net9.0/win-x64/publish/
 
     - name: Publish zip artifact
       if: success()
       run: |
-        cd bin/Release/net9.0/win-x64
+        cd bin/Release/net9.0/win-x64/publish
         7z a NetTools-${{ steps.gitversion.outputs.assemblySemVer }}.win-x64.zip * LICENSE
 
     - name: Upload zip to workflow artifacts
@@ -67,10 +60,10 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: NetTools-zip
-        path: bin/Release/net9.0/win-x64/NetTools-${{ steps.gitversion.outputs.assemblySemVer }}.win-x64.zip
+        path: bin/Release/net9.0/win-x64/publish/NetTools-${{ steps.gitversion.outputs.assemblySemVer }}.win-x64.zip
 
     - name: Upload release to GitHub Releases
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v2
       with:
-        files: bin/Release/net9.0/win-x64/NetTools-${{ steps.gitversion.outputs.assemblySemVer }}.win-x64.zip
+        files: bin/Release/net9.0/win-x64/publish/NetTools-${{ steps.gitversion.outputs.assemblySemVer }}.win-x64.zip
