feat: list contents of publish folder in build workflow
- Add step to list contents of the publish folder before zipping the artifact.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,10 @@ jobs:
       if: success()
       run: copy LICENSE bin/Release/net9.0/win-x64/publish/
 
+    - name: List publish folder before zip
+      if: success()
+      run: dir bin/Release/net9.0/win-x64/publish
+
     - name: Publish zip artifact
       if: success()
       run: |
