chore: update build workflow and README with badge
- Modify artifact name and add retention policy for uploaded artifact in the build workflow.
- Add license badge to README.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,8 +64,10 @@ jobs:
       if: success()
       uses: actions/upload-artifact@v4
       with:
-        name: NetTools-zip
+        name: NetTools
         path: bin/Release/net9.0/win-x64/publish/NetTools-${{ steps.gitversion.outputs.assemblySemVer }}.win-x64.zip
+        if-no-files-found: ignore
+        retention-days: 7
 
     - name: Upload release to GitHub Releases
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
