--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
       if: success()
       uses: actions/upload-artifact@v4
       with:
-        name: NetTools
+        name: NetTools.win-64
         path: bin/Release/net9.0/win-x64/publish/NetTools-${{ steps.gitversion.outputs.assemblySemVer }}.win-x64.zip
         if-no-files-found: ignore
         retention-days: 7
