refactor: reorganize project structure and update paths
- Refactor file paths in build workflow to point to the correct NetTools directory.
- Remove NugetVersionComparer class and its functionalities for version comparison and prerelease detection.
- Add unit tests for NugetVersionComparer functionality.
- Add support for multiple build configurations including x64 and x86 in the solution file.
- Rename RemoveCommand.cs to NetTools/Commands/RemoveCommand.cs.
- Rename StandardizeCommand file to reflect new module structure.
- Rename StandardizeCommandOptions to NetTools namespace.
- Rename UpdateCommand file to NetTools.Commands namespace.
- Rename AsyncSpinner class file to NetTools directory.
- Rename CsprojHelpers.cs to NetTools/Helpers/CsprojHelpers.cs.
- Add NuGet version comparison utility with methods to get the greater version and check for prerelease status.
- Rename Package class to NetTools.Models namespace.
- Rename project file to proper directory structure.
- Rename Program.cs to NetTools/Program.cs.
- Rename launch settings configuration file to the NetTools directory.
- Rename script to organize project structure.
- Rename DotnetCommandRunner service to NetTools directory.
- Rename INugetService file to the NetTools directory.
- Rename IProcessRunner service file to NetTools directory.
- Rename IXmlService file to NetTools namespace.
- Rename NugetService to NetTools namespace.
- Rename NugetVersionStandardizer service to the NetTools directory.
- Rename ProcessRunner.cs to NetTools directory.
- Rename SolutionExplorer class file and modify prompt return syntax.
- Rename XmlService to NetTools.
- Rename Startup.cs to NetTools/Startup.cs.
- Rename image to reorganize assets within the project structure.
- Rename screenshot image to the NetTools directory.

Signed-off-by: Douglas Cunha <dougcunha@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,16 +51,16 @@ jobs:
 
     - name: Copy LICENSE to output
       if: success()
-      run: copy LICENSE bin/Release/net9.0/win-x64/publish/
+      run: copy LICENSE NetTools/bin/Release/net9.0/win-x64/publish/
 
     - name: List publish folder before zip
       if: success()
-      run: dir bin/Release/net9.0/win-x64/publish
+      run: dir NetTools/bin/Release/net9.0/win-x64/publish
 
     - name: Publish zip artifact
       if: success()
       run: |
-        cd bin/Release/net9.0/win-x64/publish
+        cd NetTools/bin/Release/net9.0/win-x64/publish
         del NetTools-*.zip 2>NUL
         7z a NetTools-${{ steps.gitversion.outputs.assemblySemVer }}.win-x64.zip .\*
 
@@ -69,7 +69,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: NetTools.win-64
-        path: bin/Release/net9.0/win-x64/publish/NetTools-${{ steps.gitversion.outputs.assemblySemVer }}.win-x64.zip
+        path: NetTools/bin/Release/net9.0/win-x64/publish/NetTools-${{ steps.gitversion.outputs.assemblySemVer }}.win-x64.zip
         if-no-files-found: ignore
         retention-days: 7
 
@@ -77,4 +77,4 @@ jobs:
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v2
       with:
-        files: bin/Release/net9.0/win-x64/publish/NetTools-${{ steps.gitversion.outputs.assemblySemVer }}.win-x64.zip
+        files: NetTools/bin/Release/net9.0/win-x64/publish/NetTools-${{ steps.gitversion.outputs.assemblySemVer }}.win-x64.zip
