--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,9 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '9.0.x'
-        
-    - name: Restore dependencies
-      run: dotnet restore
-      
+
     - name: Build
-      run: dotnet build --no-restore -c Release -r win-x64
+      run: dotnet build -c Release
       
     - name: Test
       run: dotnet test --no-build -c Release --verbosity normal --collect:"XPlat Code Coverage"
