chore: streamline workflows and update Codecov Action
- Rename workflow to focus on build and release, remove pull request trigger, and streamline job steps by eliminating continuous error reporting.
- Update Codecov Action to version 5 and adjust upload parameters.
- Add code coverage badge to README file

Signed-off-by: Douglas Cunha <dougcunha@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,9 @@
-name: Build, Test and Version
+name: Build and Release
 
 on:
   push:
-    branches: [ master ]
     tags: [ '*' ]
-  pull_request:
-    branches: [ master ]
+  workflow_dispatch:  # Permite trigger manual quando necessário
 
 permissions:
   contents: write
@@ -47,7 +45,6 @@ jobs:
 
     - name: Test
       run: dotnet test --no-build --verbosity normal
-      continue-on-error: true
 
     - name: Copy LICENSE to output
       if: success()
