feat: Add workflow dispatch to CI and improve comments.
- Refine workflow dispatch comment for clarity.
- Add workflow dispatch trigger to CI configuration.

Signed-off-by: Douglas Cunha <dougcunha@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build and Release
 on:
   push:
     tags: [ '*' ]
-  workflow_dispatch:  # Permite trigger manual quando necessário
+  workflow_dispatch:  
 
 permissions:
   contents: write
